[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Menus/QuitButton.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Objects/Weapons/Crystal_Shoot.wav" type="AudioStream" id=2]
[ext_resource path="res://_common/sfx/Currency Pick Up.wav" type="AudioStream" id=3]

[node name="QuitButton" type="Button"]
margin_left = 180.0
margin_right = 330.0
margin_bottom = 60.0
rect_min_size = Vector2( 150, 60 )
size_flags_horizontal = 6
text = "Quit"
icon_align = 1
script = ExtResource( 1 )

[node name="HoverNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -7.0

[node name="ClickNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -7.0

[connection signal="mouse_entered" from="." to="." method="_on_QuitButton_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_QuitButton_pressed"]
[connection signal="finished" from="ClickNoise" to="." method="_on_ClickNoise_finished"]
